--- a/studies/template_jobs/2_configure_and_track/config.yaml
+++ b/studies/template_jobs/2_configure_and_track/config.yaml
@@ -3,16 +3,16 @@ config_collider:
   config_knobs_and_tuning:
     knob_settings:
       # Orbit knobs
-      on_x1: 250 # [urad]
+      on_x1: 0 # [urad]
       on_sep1: 0 # [mm]
-      on_x2: -170 # [urad]
-      on_sep2: 0.138 # 0.1443593672910653 # 0.138 # [mm]
-      on_x5: 250 # [urad]
+      on_x2: 0 # [urad]
+      on_sep2: 0.0 # 0.1443593672910653 # 0.138 # [mm]
+      on_x5: 0 # [urad]
       on_sep5: 0 # [mm]
       on_x8h: 0.0
-      on_x8v: 170
-      on_sep8h: -0.01 # different from 0 so that the levelling algorithm is not stuck
-      on_sep8v: 0.01 # idem
+      on_x8v: 0
+      on_sep8h: 0.0 # different from 0 so that the levelling algorithm is not stuck
+      on_sep8v: 0.0 # idem
       on_a1: 0 # [urad]
       on_o1: 0 # [mm]
       on_a2: 0 # [urad]
@@ -21,15 +21,15 @@ config_collider:
       on_o5: 0 # [mm]
       on_a8: 0 # [urad]
       on_o8: 0 # [mm]
-      on_disp: 1 # Value to choose could be optics-dependent
+      on_disp: 0 # Value to choose could be optics-dependent
 
       # Crab cavities
       on_crab1: 0 # [urad]
       on_crab5: 0 # [urad]
 
       # Magnets of the experiments
-      on_alice_normalized: 1
-      on_lhcb_normalized: 1
+      on_alice_normalized: 0
+      on_lhcb_normalized: 0
       on_sol_atlas: 0
       on_sol_cms: 0
       on_sol_alice: 0
@@ -82,96 +82,112 @@ config_collider:
         c_minus_knob_2: c_minus_im_b2
 
   config_beambeam:
-    skip_beambeam: false
+    skip_beambeam: true
     bunch_spacing_buckets: 10
     num_slices_head_on: 11
     num_long_range_encounters_per_side:
-      ip1: 25
-      ip2: 20
-      ip5: 25
-      ip8: 20
+      ip1: 0
+      ip2: 0
+      ip5: 0
+      ip8: 0
     sigma_z: 0.0761
     num_particles_per_bunch: 140000000000.0
     nemitt_x: 2.5e-6
     nemitt_y: 2.5e-6
     mask_with_filling_pattern:
-      pattern_fname: ../../filling_scheme/8b4e_1972b_1960_1178_1886_224bpi_12inj_800ns_bs200ns.json
-      i_bunch_b1: 1963 # If not specified, the bunch with the worst schedule is chosen
-      i_bunch_b2: 1963 # Same. A value for i_bunch_b1 and i_bunch_b2 must be specified if pattern_fname is specified
+      pattern_fname: ../../filling_scheme/single_bunch.json
+      i_bunch_b1: 0 # If not specified, the bunch with the worst schedule is chosen
+      i_bunch_b2: 0 # Same. A value for i_bunch_b1 and i_bunch_b2 must be specified if pattern_fname is specified
 
+    luminosity_ip1_without_beam_beam: 5.252707164878317e+30
+    Pile-up_ip1_without_beam_beam: 37.83462742104141
+    luminosity_ip2_without_beam_beam: 0.0
+    Pile-up_ip2_without_beam_beam: .nan
+    luminosity_ip5_without_beam_beam: 5.252746572200036e+30
+    Pile-up_ip5_without_beam_beam: 37.83491126731118
+    luminosity_ip8_without_beam_beam: 0.0
+    Pile-up_ip8_without_beam_beam: .nan
+    luminosity_ip1_with_beam_beam: 5.252707164878317e+30
+    Pile-up_ip1_with_beam_beam: 37.83462742104141
+    luminosity_ip2_with_beam_beam: 0.0
+    Pile-up_ip2_with_beam_beam: .nan
+    luminosity_ip5_with_beam_beam: 5.252746572200036e+30
+    Pile-up_ip5_with_beam_beam: 37.83491126731118
+    luminosity_ip8_with_beam_beam: 0.0
+    Pile-up_ip8_with_beam_beam: .nan
   config_lumi_leveling_ip1_5:
-    skip_leveling: false
+    skip_leveling: true
     luminosity: 5.0e+34
-    num_colliding_bunches: null # This will be set automatically according to the filling scheme
+    num_colliding_bunches:      # This will be set automatically according to the filling scheme
     vary:
-      - num_particles_per_bunch
+    - num_particles_per_bunch
     constraints:
       max_intensity: 2.3e11
       max_PU: 160
 
-  skip_leveling: false
+  skip_leveling: true
   config_lumi_leveling:
     ip2:
       separation_in_sigmas: 5
       plane: x
       impose_separation_orthogonal_to_crossing: false
       knobs:
-        - on_sep2
+      - on_sep2
       bump_range:
         lhcb1:
-          - e.ds.l2.b1
-          - s.ds.r2.b1
+        - e.ds.l2.b1
+        - s.ds.r2.b1
         lhcb2:
-          - s.ds.r2.b2
-          - e.ds.l2.b2
+        - s.ds.r2.b2
+        - e.ds.l2.b2
       preserve_angles_at_ip: true
       preserve_bump_closure: true
       corrector_knob_names:
         # to preserve angles at ip
-        - corr_co_acbyvs4.l2b1
-        - corr_co_acbyhs4.l2b1
-        - corr_co_acbyvs4.r2b2
-        - corr_co_acbyhs4.r2b2
+      - corr_co_acbyvs4.l2b1
+      - corr_co_acbyhs4.l2b1
+      - corr_co_acbyvs4.r2b2
+      - corr_co_acbyhs4.r2b2
           # to close the bumps
-        - corr_co_acbyvs4.l2b2
-        - corr_co_acbyhs4.l2b2
-        - corr_co_acbyvs4.r2b1
-        - corr_co_acbyhs4.r2b1
-        - corr_co_acbyhs5.l2b2
-        - corr_co_acbyvs5.l2b2
-        - corr_co_acbchs5.r2b1
-        - corr_co_acbcvs5.r2b1
+      - corr_co_acbyvs4.l2b2
+      - corr_co_acbyhs4.l2b2
+      - corr_co_acbyvs4.r2b1
+      - corr_co_acbyhs4.r2b1
+      - corr_co_acbyhs5.l2b2
+      - corr_co_acbyvs5.l2b2
+      - corr_co_acbchs5.r2b1
+      - corr_co_acbcvs5.r2b1
     ip8:
       luminosity: 2.0e+33
-      num_colliding_bunches: null # This will be set automatically according to the filling scheme
+      num_colliding_bunches:      # This will be set automatically according to the filling scheme
       impose_separation_orthogonal_to_crossing: true
       knobs:
-        - on_sep8h
-        - on_sep8v
+      - on_sep8h
+      - on_sep8v
       bump_range:
         lhcb1:
-          - e.ds.l8.b1
-          - s.ds.r8.b1
+        - e.ds.l8.b1
+        - s.ds.r8.b1
         lhcb2:
-          - s.ds.r8.b2
-          - e.ds.l8.b2
+        - s.ds.r8.b2
+        - e.ds.l8.b2
       preserve_angles_at_ip: true
       preserve_bump_closure: true
       corrector_knob_names:
         # to preserve angles at ip
-        - corr_co_acbyvs4.l8b1
-        - corr_co_acbyhs4.l8b1
-        - corr_co_acbyvs4.r8b2
-        - corr_co_acbyhs4.r8b2
+      - corr_co_acbyvs4.l8b1
+      - corr_co_acbyhs4.l8b1
+      - corr_co_acbyvs4.r8b2
+      - corr_co_acbyhs4.r8b2
           # to close the bumps
-        - corr_co_acbyvs4.l8b2
-        - corr_co_acbyhs4.l8b2
-        - corr_co_acbyvs4.r8b1
-        - corr_co_acbyhs4.r8b1
-        - corr_co_acbcvs5.l8b2
-        - corr_co_acbchs5.l8b2
-        - corr_co_acbyvs5.r8b1
-        - corr_co_acbyhs5.r8b1
+      - corr_co_acbyvs4.l8b2
+      - corr_co_acbyhs4.l8b2
+      - corr_co_acbyvs4.r8b1
+      - corr_co_acbyhs4.r8b1
+      - corr_co_acbcvs5.l8b2
+      - corr_co_acbchs5.l8b2
+      - corr_co_acbyvs5.r8b1
+      - corr_co_acbyhs5.r8b1
 
 config_simulation:
   # Collider file
@@ -190,11 +206,11 @@ config_simulation:
   beam: lhcb1 #lhcb1 or lhcb2
 
 # Save collider or not
-dump_collider: false
-dump_config_in_collider: false
+dump_collider: true
+dump_config_in_collider: true
 
 # Context for the simulation
-context: "cpu" # 'cupy' # opencl
+context: cpu   # 'cupy' # opencl
 
 # Device number for GPU simulation
 device_number: # 0
